<resources>
    <string name="app_name">VicenteRalphLab5</string>
    <string name="bgc">BGC</string>
    <string name="location_taguig_city">Location: Taguig City</string>
    <string name="distance_from_ust_14_1_km">Distance from UST: 14.1 km</string>
    <string name="map">Map</string>
    <string name="activity_2">Activity 2</string>
    <string name="todo">TODO</string>
    <string name="ayala_center">AYALA</string>
    <string name="location_makati_city">Location: Makati City</string>
    <string name="distance_from_ust_9_0_km">DIstance from UST: 9.0 km</string>
    <string name="activity1">Activity 1</string>
    <string name="todo2">TODO2</string>
</resources>
